# fmu-settings

./: pyproject.toml
src/fmu/settings/: _fmu_dir.py
src/fmu/settings/_resources/: changelog_manager.py  log_manager.py  mappings_manager.py
src/fmu/settings/models/: _enums.py  change_info.py  changelog.py  log.py  mappings.py
tests/: test_fmu_dir.py
tests/test_resources/: test_changelog_manager.py  test_mappings_manager.py
